wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress
    spec:
      containers:
      - image: acrcnspdevweuqrld7.azurecr.io/wordpress:latest
        name: wordpress
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html/wordpress
          name: wp-persistent-storage
      volumes: 
      - name: wp-persistent-storage
        persistentVolumeClaim:
         claimName: wordpress-pvc
status: {}
