devops-with-github-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: devops-with-github
  name: devops-with-github
  namespace: devops-with-github
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: devops-with-github
  type: ClusterIP
status:
  loadBalancer: {}
