ingress-devops-with-github.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  creationTimestamp: null
  name: devops-with-github
  namespace: devops-with-github
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: devops-with-github
            port:
              number: 80
        path: /devops-with-github
        pathType: Prefix 
status:
  loadBalancer: {}
