ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  creationTimestamp: null
  name: wordpress 
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /wordpress
        pathType: Prefix
status:
  loadBalancer: {}
